Add info to .env_example and removing sqlite db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/bruno/.virtualenvs/dakota/bin/python"
+    "python.pythonPath": "/Users/alpz/.virtualenvs/dakota/bin/python"
 }
